Modificaciones para nueva solicitud por email de cuenta